Fix jumping edit-tabs

--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -401,7 +401,10 @@ table .index_check {
   from{ opacity:0 }
   to{ opacity:1 }
 }
-.panel-body
-{
-overflow-y: auto;
+.panel-body {
+  overflow-y: auto;
+}
+.nav-tabs > li.active > a:hover{
+  border: 1px solid #ddd !important;
+  border-bottom-color: #fff !important;
 }
